ISBN numbers in links.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -340,9 +340,10 @@
         Carrier's website</a>.
       </li>
       <li lang="de">Schnädelbach, Herbert:
-        <a href="http://www.chbeck.de/Schnaedelbach-Philosophen-wissen/productview.aspx?product=9761200"
-        class="booktitle">Was Philosophen wissen und was man von ihnen lernen kann</a>.
-        C. H. Beck, 2012. <abbr>ISBN</abbr> 978-3-406-63360-7.<br />
+        <i class="booktitle">Was Philosophen wissen und was man von ihnen lernen kann</i>.
+        C. H. Beck, 2012. 
+        <a href="http://www.chbeck.de/Schnaedelbach-Philosophen-wissen/productview.aspx?product=9761200"><abbr>ISBN</abbr> 978-3-406-63360-7</a>.
+        <br />
         <span lang="en">This book counters the idea that philosophy makes no 
         progress by pointing out that introductory courses in philosophy have a 
         lot of content in common, so there is an implicit consensus on what 
@@ -356,9 +357,9 @@
         </span>
       </li>
       <li>Gutting, Gary:
-        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-general-interest/what-philosophers-know-case-studies-recent-analytic-philosophy?format=PB"
-        class="booktitle">What Philosophers Know: Case Studies in Recent Analytic Philosophy</a>.
-        Cambridge: Cambridge University Press, 2009. <abbr>ISBN</abbr> 9780521672221.
+        <i class="booktitle">What Philosophers Know: Case Studies in Recent Analytic Philosophy</i>.
+        Cambridge: Cambridge University Press, 2009. 
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-general-interest/what-philosophers-know-case-studies-recent-analytic-philosophy?format=PB"><abbr>ISBN</abbr> 9780521672221</a>.
         <br />
         This book is similar to <span lang="de">Schnädelbach</span>'s but
         focuses on contributions made by 
@@ -371,9 +372,10 @@
         <a href="https://en.wikipedia.org/wiki/Richard_Rorty">Richard Rorty</a>.
       </li>
       <li lang="fr">Granger, Gilles-Gaston:
-        <a href="http://www.odilejacob.fr/catalogue/sciences-humaines/philosophie/pour-la-connaissance-philosophique_9782738100238.php" 
-        class="booktitle">Pour la connaissance philosophique</a>.
-        Odile Jacob, 1988. <abbr>ISBN</abbr> 9782738100238.<br />
+        <i class="booktitle">Pour la connaissance philosophique</i>.
+        Odile Jacob, 1988. 
+        <a href="http://www.odilejacob.fr/catalogue/sciences-humaines/philosophie/pour-la-connaissance-philosophique_9782738100238.php"><abbr>ISBN</abbr> 9782738100238</a>.
+        <br />
         <span lang="en">This book discusses whether philosophy is a type of 
         knowledge and whether there are philosophical truths.</span>
       </li>
@@ -386,7 +388,7 @@
       <li>Dietrich, Eric: 
         <a href="http://commons.pacificu.edu/cgi/viewcontent.cgi?article=1396&context=eip">There Is No Progress in Philosophy</a> (<abbr>PDF</abbr>), 
         <i class="journal">Essays in Philosophy</i>, 12.2 (July 2011: Philosophy's Future: Science or Something Else?).
-        <br />According to Dietrich, philosophy still deals with the same questions as 2400 years ago. 
+        <br />According to Dietrich, philosophy still deals with the same questions as 2500 years ago. 
         Philosophy <q>morphs and transforms to stay current</q>: ideas and theories are reformulated in modern language, but that is all the progress there is.
         Philosophical theories that are definitely contradictory are equally plausible. 
         Dietrich even argues that philosophy will never be able to solve any philosophical problems.
@@ -492,9 +494,9 @@
       </li>
       <li>
         DiCarlo, Christopher: 
-        <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&cPath=1&products_id=2067"
-        class="booktitle">How to Become a Really Good Pain in the Ass: A Critical Thinker's Guide to Asking the Right Questions</a>.
-        Prometheus Books, 2011. (398 p.) <abbr>ISBN</abbr> 978-1-61614-397-8.
+        <i class="booktitle">How to Become a Really Good Pain in the Ass: A Critical Thinker's Guide to Asking the Right Questions</i>.
+        Prometheus Books, 2011. (398 p.) 
+        <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&cPath=1&products_id=2067"><abbr>ISBN</abbr> 978-1-61614-397-8</a>.
         <!-- Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
       </li>
     </ul>
@@ -530,8 +532,10 @@
     <h2>History of Philosophy</h2>
     <h3>A History of Western Philosophy (Russell, 1945)</h3>
     <p>Russell, Bertrand: 
-      <a href="https://www.routledge.com/products/9780415325059" class="booktitle">History of Western Philosophy</a>.
-      Routledge, 2004. (792 p.) <abbr>ISBN</abbr> 9780415325059.<br />
+      <i class="booktitle">History of Western Philosophy</i>.
+      Routledge, 2004. (792 p.) 
+      <a href="https://www.routledge.com/products/9780415325059"><abbr>ISBN</abbr> 9780415325059</a>.
+      <br />
       <a href="https://en.wikipedia.org/wiki/Bertrand_Russell">Bertrand Russell</a>
       originally published 
       <a href="https://en.wikipedia.org/wiki/A_History_of_Western_Philosophy" 
@@ -579,29 +583,29 @@
     <h3>A New History of Western Philosophy (Kenny, 2006-2007)</h3>
     <ul>
       <li>Kenny, Anthony:
-        <a href="http://ukcatalogue.oup.com/product/9780198752721.do" class="booktitle">Ancient Philosophy</a>.
+        <i class="booktitle">Ancient Philosophy</i>.
         A New History of Western Philosophy, Volume 1.
         Oxford: Oxford University Press, 2006. (364 p.)
-        <abbr>ISBN</abbr> 978-0-19-875272-1 (paperback)
+        <a href="http://ukcatalogue.oup.com/product/9780198752721.do"><abbr>ISBN</abbr> 978-0-19-875272-1 (paperback)</a>.
       </li>
       <li>Kenny, Anthony:
-        <a href="http://ukcatalogue.oup.com/product/9780198752745.do" class="booktitle">Medieval Philosophy</a>.
+        <i class="booktitle">Medieval Philosophy</i>.
         A New History of Western Philosophy, Volume 2.
         Oxford: Oxford University Press, 2007. (352 p.)
-        <abbr>ISBN</abbr> 978-0-19-875274-5 (paperback)
+        <a href="http://ukcatalogue.oup.com/product/9780198752745.do"><abbr>ISBN</abbr> 978-0-19-875274-5 (paperback)</a>.
       </li>
       <li>Kenny, Anthony:
-        <a href="http://ukcatalogue.oup.com/product/9780198752769.do" class="booktitle">The Rise of Modern Philosophy</a>.
+        <i class="booktitle">The Rise of Modern Philosophy</i>.
         A New History of Western Philosophy, Volume 3.
         Oxford: Oxford University Press, 2008. (376 p.)
-        <abbr>ISBN</abbr> 978-0-19-875276-9 (paperback) / 
+        <a href="http://ukcatalogue.oup.com/product/9780198752769.do"><abbr>ISBN</abbr> 978-0-19-875276-9 (paperback)</a> / 
         <abbr>ISBN</abbr> 978-0-19-875277-6 (hardback)
       </li>
       <li>Kenny, Anthony:
-        <a href="http://ukcatalogue.oup.com/product/9780198752790.do" class="booktitle">Philosophy in the Modern World</a>.
+        <i class="booktitle">Philosophy in the Modern World</i>.
         A New History of Western Philosophy, Volume 4.
         Oxford: Oxford University Press, 2007. (368 p.)
-        <abbr>ISBN</abbr> 978-0-19-954637-4 (paperback) / 
+        <a href="http://ukcatalogue.oup.com/product/9780198752790.do"><abbr>ISBN</abbr> 978-0-19-954637-4 (paperback)</a> / 
         <abbr>ISBN</abbr> 978-0-19-875279-0 (hardback)
         <!-- @@ sample http://fdslive.oup.com/www.oup.com/academic/pdf/13/9780198752790.pdf -->
       </li>
@@ -621,9 +625,8 @@
 
     <h3>A Little History of Philosophy (Warburton, 2012)</h3>
     <p>Warburton, Nigel:
-      <a href="http://yalepress.yale.edu/yupbooks/book.asp?isbn=9780300187793" 
-      class="booktitle">A Little History of Philosophy</a>.
-      New Haven &amp; London: Yale University Press, 2012 (2011). (252 pages)<br />
+      <i class="booktitle">A Little History of Philosophy</i>.
+      New Haven &amp; London: <a href="http://yalepress.yale.edu/yupbooks/book.asp?isbn=9780300187793">Yale University Press</a>, 2012 (2011). (252 pages)<br />
       This very accessible book contains 40 chapters about great thinkers in 
       the history of Western philosophy from Socrates to Peter Singer.
       The Yale University Press blog has an 
@@ -675,7 +678,7 @@
         <a href="https://www.youtube.com/playlist?list=PL-0zpu2toena49fxDoMqtE_vfMoHPSEFs">History 
         of Philosophy</a>
         is a course by Arthur Holmes, who is described as a
-        &rdquo;Christian scholar and philosopher&ldquo;.
+        &ldquo;Christian scholar and philosopher&rdquo;.
         The course focuses on Ancient Greek philosohy.
         It has 9 videos that are roughly between 40 and 60 minutes long.
         <!-- channel "Theology, Philosophy and Science": https://www.youtube.com/user/godlogicscience/ -->
@@ -794,10 +797,9 @@
         <abbr>ISBN</abbr> 978-1-85168-484-7 (210 pages).
       </li>
       <li>Brook, Andrew; Ross, Don (editors):
-        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"
-        class="booktitle">Daniel Dennett</a>.
+        <i class="booktitle">Daniel Dennett</i>.
         Cambridge University Press, 2002.
-        <abbr>ISBN</abbr> 9780521008648 (320 pages).
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"><abbr>ISBN</abbr> 9780521008648</a> (320 pages).
       </li>
     </ul>
     <!-- Misc
@@ -922,17 +924,16 @@
         (<a href="http://www.css.edu/about/spotlight-arts-and-lectures/lectures/alworth-center-for-peace-and-justice-lectures.html">Alworth Center for Peace and Justice</a>, 
         College of St. Sholastica, 23 February 2012).
         This is an audio recording of a presentation based on the book
-        <a href="http://press.princeton.edu/titles/9112.html" 
-        class="booktitle">Not For Profit: Why Democracy Needs the Humanities</a>
-        (Princeton University Press, 2010, <abbr>ISBN</abbr> 9780691140643).
+        <i class="booktitle">Not For Profit: Why Democracy Needs the Humanities</i>
+        (Princeton University Press, 2010, 
+        <a href="http://press.princeton.edu/titles/9112.html"><abbr>ISBN</abbr> 9780691140643</a>).
         <!-- @@book sample: chapter 1 -->
         Martha Nussbaum had previously written in defence of 
         <a href="https://en.wikipedia.org/wiki/Liberal_education">liberal education</a>
         in her book
-        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674179493"
-        class="booktitle">Cultivating Humanity: A Classical Defense of Reform in 
-        Liberal Education</a> (Harvard University Press, 1998.
-        <abbr>ISBN</abbr> 9780674179493).
+        <i class="booktitle">Cultivating Humanity: A Classical Defense of Reform in 
+        Liberal Education</i> (Harvard University Press, 1998.
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674179493"><abbr>ISBN</abbr> 9780674179493</a>).
         <!-- See also, possibly:
           "Humanistic Education & Social Justice": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
           "Creating Capabilities: The Human Development Approach": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
@@ -940,25 +941,24 @@
         -->
       </li>
       <li>Jonathan Bate
-        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660631/"
-        class="booktitle">The Public Value of the Humanities</a>.
-        Bloomsbury, 2011. <abbr>ISBN</abbr> 9781849660631.
+        <i class="booktitle">The Public Value of the Humanities</i>.
+        Bloomsbury, 2011. 
+        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660631/"><abbr>ISBN</abbr> 9781849660631</a>.
       </li>
       <li>Helen Small:
-        <a href="http://ukcatalogue.oup.com/product/9780199683864.do"
-        class="booktitle">The Value of the Humanities</a>.
-        Oxford University Press, 2013. <abbr>ISBN</abbr> 978-0-19-968386-4.
+        <i class="booktitle">The Value of the Humanities</i>.
+        Oxford University Press, 2013. 
+        <a href="http://ukcatalogue.oup.com/product/9780199683864.do"><abbr>ISBN</abbr> 978-0-19-968386-4</a>.
       </li>
       <li>Eleonora Belfiore &amp; Anna Upchurch (editors):
-        <a href="http://www.palgrave.com/page/detail/humanities-in-the-twenty-first-century-eleonora-belfiore/?sf1=barcode&st1=9780230366633"
-        class="booktitle">Humanities in the Twenty-First Century: Beyond Utility 
-        and Markets</a>. Palgrave Macmillan, 2013.
-        <abbr>ISBN</abbr> 9780230366633.
+        <i class="booktitle">Humanities in the Twenty-First Century: Beyond Utility 
+        and Markets</i>. Palgrave Macmillan, 2013.
+        <a href="http://www.palgrave.com/page/detail/humanities-in-the-twenty-first-century-eleonora-belfiore/?sf1=barcode&st1=9780230366633"><abbr>ISBN</abbr> 9780230366633</a>.
       </li>
       <li>Peter Brooks, Hilary Jewett (editors):
-        <a href="http://fordhampress.com/index.php/the-humanities-and-pubic-life-paperback.html"
-        class="booktitle">The Humanities and Public Life</a>.
-        Fordham University Press, 2014. <abbr>ISBN</abbr> 9780823257058.
+        <i class="booktitle">The Humanities and Public Life</i>.
+        Fordham University Press, 2014. 
+        <a href="http://fordhampress.com/index.php/the-humanities-and-pubic-life-paperback.html"><abbr>ISBN</abbr> 9780823257058</a>.
       </li>
       <li>Poul Holm, Arne Jarrick, Dominic Scott: 
         <a href="http://www.palgrave.com/page/detail/humanities-world-report-2015-poul-holm/?sf1=barcode&st1=9781137500274"
