+ Links to HdM Science Day archive.

--- a/science/index.html
+++ b/science/index.html
@@ -358,6 +358,50 @@
     <!--h2>Science Myths</h2-->
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
   </main>
+  <!-- John S. Wilkins: Species: The History of an Idea. University of California Press, 2011: http://www.ucpress.edu/book.php?isbn=9780520271395 -->
+
+  <!-- 
+  <h2>Statistics and Probability</h2>
+  <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
+  <ul>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall problem</a> on Wikipedia.
+      (See also <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
+      on the Scam School channel on YouTube.)
+    </li>
+  </ul>
+  -->
+
+  <h2><abbr>HdM</abbr> Science Day</h2>
+  <p>Each semester, Stuttgart Media University (<span lang="de">Hochschule der Medien</span>)
+    organises a &ldquo;science day&rdquo;. This is an event where researches present
+    topics that are not part of the regular curriculum at the university.
+    The presentations can also be viewed through a live video stream;
+    the videos recordings are then archived.
+  </p>
+  <ul>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
+      21 December 2012.
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
+      21 June 2013.
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
+      18 November 2013.
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
+      9 May 2014.
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
+      12 December 2014.
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
+      26 June 2015. 
+    </li>
+    <li><a href="http://events.mi.hdm-stuttgart.de/">7th Science Day</a>,
+      18 December 2015. 
+    </li>
+  </ul>
 
   <footer>
     <p class="licence">
