New page: humanities.
Section on "The Humanities" was moved from the philosophy page to a new
page. The new page was added to the site navigation on the other pages.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -26,6 +26,7 @@
           </li>
         </ul>
       </li>
+      <li><a href="../humanities/index.html">Humanities</a></li>
     </ul>
   </nav>
 
@@ -949,169 +950,6 @@
       </li>
     </ul>
 
-
-    <h2>The Humanities</h2>
-    <p>Editorial note: this section will probably move to a separate page.</p>
-    <p>The English language makes a distinction between &ldquo;science&rdquo;
-      and the &ldquo;humanities&rdquo;, thereby implying that the humanities
-      are not true sciences.
-      This opposition is often expressed as a distinction between 
-      <a href="https://en.wikipedia.org/wiki/Hard_and_soft_science">hard and
-      soft science</a> or, as in C. P. Snow's famous book,
-      <a href="https://en.wikipedia.org/wiki/The_Two_Cultures" 
-      class="booktitle">The Two Cultures</a> (1959).
-      Other languages do not make this distinction and
-      give the study of literature, linguistics, music <abbr>etc.</abbr>
-      names that include a word for science. These disciplines are collectively
-      known as
-      <a href="https://de.wikipedia.org/wiki/Geisteswissenschaft" 
-      lang="de">Geisteswissenschaft(en)</a> in German,
-      <a href="https://es.wikipedia.org/wiki/Humanidades"
-      lang="es">humanidades</a> in Spanish and
-      <a href="https://nl.wikipedia.org/wiki/Alfawetenschappen"
-      lang="nl">alfawetenschappen</a> in Dutch.
-      <br />
-    </p>
-    <p>The humanities (which are usually considered to include philosophy) 
-      have come under pressure after sciences like physics became
-      the model for scientific progress in general.
-      A recent example is the 
-      <a href="http://savemdxphil.com/about/">closing of the Philosophy
-      Department at Middlesex University</a>.
-      Some people have reacted to this by pointing out the value
-      of the humanities to society.
-      The British philosopher 
-      <a href="https://en.wikipedia.org/wiki/A._C._Grayling">A. C. Grayling</a>
-      responded by founding the
-      <a href="https://en.wikipedia.org/wiki/New_College_of_the_Humanities">New
-      College of the Humanities</a> in London, which started offering tuition
-      in 2012. 
-      <!-- @@more about HCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
-    </p>
-    <p>(Note: another distinction is between sciences, humanities and 
-      &ldquo;<a href="https://en.wikipedia.org/wiki/Social_science">social
-      science</a>&rdquo; / 
-      <a href="https://fr.wikipedia.org/wiki/Sciences_humaines_et_sociales"
-      lang="fr">sciences humaines et sociales</a> (in French) / 
-      <a href="https://de.wikipedia.org/wiki/Sozialwissenschaften"
-      lang="de">Sozialwissenschaften</a> (in German).
-      There are also defences of the social sciences similar to the 
-      defences of the humanities.)
-      <!-- Defences on social sciences:
-        Simon Bastow: The Impact of the Social Sciences: How Academics and their Research Make a Difference.
-        John D. Brewer: The Public Value of the Social Sciences: An Interpretative Essay.
-      -->
-    </p>
-
-    <ul>
-      <li>
-        <a href="https://www.youtube.com/watch?v=4D0fLisyjBY">Why Arts 
-        Graduates Are Under-Employed</a> is another video by
-        The School of Life. It discusses the value of arts and humanities,
-        which includes philosophy.
-      </li>
-      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
-      <li>
-        Martha Nussbaum:
-        <a href="https://www.youtube.com/watch?v=RAwi7UKK-j8">Why Democracy 
-        Needs the Humanities</a>
-        (<a href="http://www.css.edu/about/spotlight-arts-and-lectures/lectures/alworth-center-for-peace-and-justice-lectures.html">Alworth Center for Peace and Justice</a>, 
-        College of St. Sholastica, 23 February 2012).
-        This is an audio recording of a presentation based on the book
-        <i class="booktitle">Not For Profit: Why Democracy Needs the Humanities</i>
-        (Princeton University Press, 2010, 
-        <a href="http://press.princeton.edu/titles/9112.html"><abbr>ISBN</abbr> 9780691140643</a>).
-        <!-- @@book sample: chapter 1 -->
-        Martha Nussbaum had previously written in defence of 
-        <a href="https://en.wikipedia.org/wiki/Liberal_education">liberal education</a>
-        in her book
-        <i class="booktitle">Cultivating Humanity: A Classical Defense of Reform in 
-        Liberal Education</i> (Harvard University Press, 1998.
-        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674179493"><abbr>ISBN</abbr> 9780674179493</a>).
-        <!-- See also, possibly:
-          "Humanistic Education & Social Justice": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
-          "Creating Capabilities: The Human Development Approach": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
-          "Why Legal Education Needs the Humanities": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
-        -->
-      </li>
-      <li>Matthew Batstone:
-        <a href="http://www.theguardian.com/higher-education-network/blog/2012/jan/11/defend-humanities-graduates">In Defence of the Humanities</a>,
-        <i class="newspaper">The Guardian</i>, 11.01.2012.
-      </li>
-      <li>Jonathan Bate
-        <i class="booktitle">The Public Value of the Humanities</i>.
-        Bloomsbury, 2011. 
-        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660631/"><abbr>ISBN</abbr> 9781849660631</a>.
-      </li>
-      <li>Helen Small:
-        <i class="booktitle">The Value of the Humanities</i>.
-        Oxford University Press, 2013. 
-        <a href="http://ukcatalogue.oup.com/product/9780199683864.do"><abbr>ISBN</abbr> 978-0-19-968386-4</a>.
-      </li>
-      <li>Eleonora Belfiore &amp; Anna Upchurch (editors):
-        <i class="booktitle">Humanities in the Twenty-First Century: Beyond Utility 
-        and Markets</i>. Palgrave Macmillan, 2013.
-        <a href="http://www.palgrave.com/page/detail/humanities-in-the-twenty-first-century-eleonora-belfiore/?sf1=barcode&st1=9780230366633"><abbr>ISBN</abbr> 9780230366633</a>.
-      </li>
-      <li>Peter Brooks, Hilary Jewett (editors):
-        <i class="booktitle">The Humanities and Public Life</i>.
-        Fordham University Press, 2014. 
-        <a href="http://fordhampress.com/index.php/the-humanities-and-pubic-life-paperback.html"><abbr>ISBN</abbr> 9780823257058</a>.
-      </li>
-      <li>Poul Holm, Arne Jarrick, Dominic Scott: 
-        <a href="http://www.palgrave.com/page/detail/humanities-world-report-2015-poul-holm/?sf1=barcode&st1=9781137500274"
-        class="booktitle">Humanities World Report 2015</a>.
-        Palgrave Macmillan, 2014. 
-        <br/>This book available on a <abbr title="Creative Commons">CC</abbr> BY 
-        licence; you can find it for free on
-        <a href="http://www.palgraveconnect.com/pc/browse/listcollection?pcode=oa">Palgrave Connect</a>
-        <!-- direct link: http://www.palgraveconnect.com/pc/doifinder/10.1057/9781137500281 -->
-        and 
-        <a href="https://www.researchgate.net/publication/268513349_Humanities_World_Report_2015">ResearchGate</a>.
-      </li>
-      <li>
-        <a href="https://www.youtube.com/user/schooloflifechannel">The School of Life</a>
-        is a YouTube channel started by people who are
-        <q cite="https://www.youtube.com/user/schooloflifechannel/about">fascinated 
-        by the sort of questions we're never taught enough about at school or college: 
-        How can relationships go well? What is meaningful work? How can love last? 
-        How can one find calm? What's gone wrong (and right) with capitalism?</q>
-        The makers of this channel also say,
-        <q>We love the humanities, especially philosophy, psychotherapy, literature and art - 
-        always going to them in search of ideas that are thought-provoking, useful and consoling.</q>
-        The channel started in September 2014; the videos are typically between 
-        2 and 10 minutes long.<br />
-        The YouTube channel is only part of this initiative. See also
-        <a href="http://www.theschooloflife.com/london/">www.theschooloflife.com</a>
-        and 
-        <a href="http://www.thebookoflife.org/">www.thebookoflife.org</a>.
-      </li>
-      <li>
-        <a href="https://www.youtube.com/watch?v=6Sxttk5REkM">Who Killed the 
-        Liberal Arts?</a> is a five-minute YouTube video by
-        <a href="https://www.prageru.com/">Prager University</a>, an
-        <q cite="https://www.prageru.com/frequently-asked-questions">online video 
-        organization</q> (not a university) that 
-        <q cite="https://www.prageru.com/frequently-asked-questions">believe[s] 
-        in the principles that have made America great</q>. In the video, 
-        Heather Mac Donald of the 
-        <a href="https://en.wikipedia.org/wiki/Manhattan_Institute_for_Policy_Research">
-        Manhattan Institute (a conservative American think thank)</a> argues that
-        too many universities have infused the study of the humanities 
-        <q>with the characteristic traits of our time:
-        narcissism, an obsession with victimhood, and a relentless determination
-        to reduce the stunning complexity of the past to identity and class
-        politics</q>.
-      </li>
-      <!-- See also: 
-        * "Scholar to Address Value of Humanities at Public Universities November 4", University of Tennessee, Knoxville: http://tntoday.utk.edu/2015/10/20/scholar-address-humanities-public-universities-november-4/ 
-        * Matthew Long-Middleton & Ross Stinemetz: "The Value Of The Humanities", KCUR, 2 July 2013: http://kcur.org/post/value-humanities#stream/0 
-          - has link to http://humanitiescommission.org/ 
-        * Stephen J. Mexal: "The Unintended Value of the Humanities", The Chronicle of Higher Education, 23 May 2010. http://chronicle.com/article/The-Unintended-Value-of-the/65619 
-        * Paul Benneworth: "Book Review: Humanities in the Twenty-First Century: Beyond Utility and Markets by Eleonora Belfiore and Anna Upchurch", LSE: http://blogs.lse.ac.uk/lsereviewofbooks/2013/07/28/book-review-humanities-in-the-twenty-first-century-beyond-utility-and-markets/
-        * Roger Scruton: "The Humanities in the Face of Brain Science": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
-      -->
-    </ul>
 
     <!-- Toward a Free and Virtuous Society 2014, International Conference, 11-14 September 2014: https://www.youtube.com/user/TaFaVS2014/feed
       "Which philosophers of our time have achieved the greatest clarity?" (asked by Nigel Warburton): https://aeon.co/conversations/which-philosophers-of-our-time-have-achieved-the-greatest-clarity-2 
