--- a/science/ioannidis.html
+++ b/science/ioannidis.html
@@ -26,6 +26,7 @@
           </li>
         </ul>
       </li>
+      <li><a href="../humanities/index.html">Humanities</a></li>
     </ul>
   </nav>
 
