body#id -> body.class

--- a/science/ioannidis.html
+++ b/science/ioannidis.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body id="sciencepage">
+<body class="sciencepage">
   <header>
     <h1><span class="h1txt">John P. A. Ioannidis</span></h1>
   </header>
