--- a/humanities/index.html
+++ b/humanities/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body id="humanitiespage">
+<body class="philosophypage">
   <header>
     <h1><span class="h1txt">Humanities</span></h1>
   </header>
