--- a/philscience/index.html
+++ b/philscience/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
-<body id="philsciencepage">
+<body class="philsciencepage">
   <header>
     <h1><span class="h1txt">Philosophy of Science</span></h1>
   </header>
