--- a/humanities/index.html
+++ b/humanities/index.html
@@ -26,7 +26,12 @@
           </li>
         </ul>
       </li>
-      <li class="active"><a href="../humanities/index.html">Humanities</a></li>
+      <li class="active"><a href="../humanities/index.html">Humanities</a>
+        <ul>
+          <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
