Girard: Intro edited.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -51,6 +51,10 @@
       whose work is not always easy to categorise. 
       In addition to literature and philosophy, his work is also relevant philosophical anthropology, 
       psychology and economics (although he did not publish in all these areas).
+      His work is based on the analysis of literary and religious texts, not on 
+      actual research in psychology or anthropology (<abbr>i.e.</abbr> no field research).
+    </p>
+    <p>
       After writing a <abbr>PhD</abbr> dissertation in history, he moved from France to the United States,
       where his first journal articles focused on French literature. 
       In his first book, <i class="booktitle" lang="fr">Mensonge romantique et vérité romanesque</i> (1961),
@@ -124,6 +128,7 @@
 
     <!--h2>Obituaries</h2-->
     <!-- @@todo -->
+    <!-- France Culture: Jean-Michel Oughourlian: Hommaga à René Girard: http://www.franceculture.fr/emission-les-nouveaux-chemins-de-la-connaissance-hommage-a-rene-girard-jean-michel-oughourlian-2015- -->
 
   </main>
 
