+ Résonance(s) channel on YouTube

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -283,6 +283,18 @@
         title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 United States">CC 
         BY-NC-SA 3.0 US</abbr> licence</a>.)
       </li>
+      <li>The French YouTube channel
+        <a href="https://www.youtube.com/user/gabrielshare" lang="fr">Résonance(s)</a>
+        has a 
+        <a href="https://www.youtube.com/playlist?list=PL3eMcg42CrI77v5--D6eizUWrowvSyUTd">philosophy playlist</a>
+        with over 90 videos. Most of the videos are between 45 and 90 minutes long.
+        The videos cover philsophers such as Aristotle,
+        <span lang="fr">Henri Bergson</span>, George Steiner, <span lang="de">Martin Heidegger</span>,
+        <span lang="fr">Vladimir Jankélévitch</span> (including some of his lectures), 
+        <span lang="fr">Lucien Jerphagnon</span>,
+        <span lang="de">Friedrich Nietzsche</span>, <span lang="fr">Blaise Pascal</span>,
+        Plato, Plotinus and <span lang="fr">Simone Weil</span>. 
+      </li>
       <!--li>
         https://www.youtube.com/channel/UCrnYMlsoyNeXuYNNh6xkv3Q Philosophy
         by Gary Edwards
@@ -291,10 +303,6 @@
         https://www.youtube.com/user/WirelessPhilosophy/ Wireless Philosophy
         http://www.wi-phi.com/
       </li-->
-      <!-- Résonance(s):
-        playlist "Philosophie (Français)" https://www.youtube.com/playlist?list=PL3eMcg42CrI77v5--D6eizUWrowvSyUTd
-          over 90 videos, most of which are between 45 and 90 minutes long
-      -->
       <!-- British Humanist Association: https://www.youtube.com/user/BritishHumanists/  -->
       <!-- Copernicus Center for Interdisciplinary Studies: https://www.youtube.com/user/CopernicusCenter/ 
         see also http://www.copernicuscenter.edu.pl/ 
