Girard: annotated bibliography (1961-1991).

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -126,6 +126,85 @@
       </li>
     </ul>
 
+    <h2>Books</h2>
+    <ul>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Mensonge romantique et vérité romanesque</i>. 1961.
+        <br /><span lang="en">Girard's first book analyses novels by Cervantes,
+        Flaubert, Stendahl and Dostoyevsky,
+        and formulates his theory of mimetic desire.</span>
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Dostoïevski&nbsp;: du double à l’unité</i>. 1963.
+        <br /><span lang="en">An analysis of several of Dostoyevsky's novels,
+        starting with <i class="booktitle">Notes from Underground</i>.
+        This essay was later reprinted in </span>
+        <i class="booktitle">Critique dans un souterrain</i>
+        <span lang="en">(see below).</span>
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">La Violence et le sacré</i>. 1972. 
+        <br /><span lang="en">In his third book, Girard looks for mimesis 
+        in myths and older literary texts (especially
+        <a href="https://en.wikipedia.org/wiki/Greek_tragedy">Greek tragedy</a>)
+        and describes how mimesis leads to scapegoating and the origin of 
+        human culture and religion.</span>
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Critique dans un souterrain</i>. 1976. 
+        <br /><span lang="en">Contains his earlier text on Dostoyevsky,
+        a discussion of Albert Camus and a critique of 
+        Gilles Deleuze and Félix Guattari's 
+        <a href="https://en.wikipedia.org/wiki/Anti-Oedipus" class="booktitle" 
+        lang="fr" hreflang="en"> L'anti-Oedipe</a>.</span>
+      </li>
+      <li><span lang="fr">Girard, René</span>: 
+        <i class="booktitle">To Double Business Bound: Essays on Literature, Mimesis, and Anthropology</i>. 1978.
+        <br />A collection of nine articles and an interview.
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Des choses cachées depuis la fondation du monde: Recherches avec Jean-Michel Oughourlian et Guy Lefort</i>. 1978.
+        <br /><span lang="en">This book consists of conversations between 
+        René Girard and the psychiatrists Jean-Michel Oughourlian and Guy Lefort.
+        Girard clarifies certain parts of <i class="booktitle">La Violence et le sacré</i>
+        and formulates his theory about the <i class="booktitle">New Testament</i> 
+        as a book that unveils and denounces scapegoating mechanisms.
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Le Bouc émissaire</i>. 1982.
+        <br /><span lang="en">Much of this book discusses 
+        the persecution of victims or scapegoats in medieval texts.
+        According to 
+        <a href="http://www.cottet.org/girard/gbiblio1.htm" lang="fr">Philippe Cottet</a>,
+        this book should not be read as an introduction to Girard's work.
+        </span>
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">La Route antique des hommes pervers</i>. 1985.
+        <br /><span lang="en">About the book of
+        <a href="https://en.wikipedia.org/wiki/Job_%28biblical_figure%29" class="booktitle">Job</a>.
+        </span>
+      </li>
+      <li>Hamerton-Kelly, Robert, ed.: 
+        <i class="booktitle">Violent Origins: Walter Burkert, René Girard, and Jonathan Z. Smith on Ritual Killing and Cultural Formation</i>. 1978.
+      </li>
+      <li lang="fr">Girard, René: 
+        <i class="booktitle">Shakespeare&nbsp;: les feux de l'envie</i>. 1990.
+        <i class="booktitle" lang="en">A Theater of Envy: Shakespeare</i>.
+        <span lang="en">This book consists mostly of journal articles that Girard had
+        published in the 1970s and 1980s.<!-- @@check -->
+        Girard shows that Shakespeare understood mimetic desire, even in early works such as 
+        <i class="booktitle">The Two Gentlemen of Verona</i> and <i class="booktitle">The Rape of Lucrece</i>.
+        Later works also show his understanding of collective violence and scapegoating.
+        However, according to Girard, Shakespeare chose to hint at these behavioural mechanisms
+        in subtext rather than discussing them openly.
+      </li>
+      <!--li lang="fr">Girard, René: 
+        <i class="booktitle">Quand ces choses commenceront</i>. 1994.
+        <br />A book of interviews with Michel Tréguer.
+      </li-->
+    </ul>
+
     <!--h2>Obituaries</h2-->
     <!-- @@todo -->
     <!-- France Culture: Jean-Michel Oughourlian: Hommaga à René Girard: http://www.franceculture.fr/emission-les-nouveaux-chemins-de-la-connaissance-hommage-a-rene-girard-jean-michel-oughourlian-2015- -->
